# I did not know that python has "set" type

--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -9,6 +9,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# \"complex\" type in Python"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -46,6 +53,29 @@
    ],
    "source": [
     "1j * 1j # another example of complex type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SET in python\n",
+    "\n",
+    "A set in Python is a built-in data type used to store collections of unique and unordered elements. It is defined by a collection of elements enclosed in curly braces. Sets are mutable, meaning that you can add or remove elements, but the elements themselves must be of an immutable data type. Sets do not allow duplicate elements and are not indexed, so you cannot access set elements by index. Python provides various methods for working with sets, such as add(), update(), remove(), and clear(). The set() constructor can be used to create a set from an iterable. Sets are useful for performing mathematical set operations like union, intersection, difference, and symmetric difference. They are particularly efficient for checking whether a specific element is contained in the set. Sets are similar to mathematical sets and support operations like intersection, union, and more"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_set1 = {1,2} # so this is a \"set\"\n",
+    "my_set2 = {1,2,\"kl\"} # also this \n",
+    "my_set3 = {1,2,\"kl\",2} # also this represents a set.\n",
+    "# but a set is a collection of unique and unordered elements.\n",
+    "# Therefore, the duplicate element \"2\" will be ignored,\n",
+    "# and the set will contain only unique elements, i.e., {1, 2, \"kl\"}"
    ]
   },
   {
