--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,6 +146,27 @@
     "# order does not matter in set but matter in list\n",
     "[1,2] == [2,1] # list  => output: False\n",
     "{1,2} == {2,1} # set => output: True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# even this is True\n",
+    "{1,2,1,2,2,2,2} == {1,1,1,1,1,1,1,2}"
    ]
   },
   {
