my_tuple=(1,2,3) # note: you can not modify tuple

--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -174,7 +174,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# list\n",
+    "my_list=[1,2,3]\n",
+    "# tuple\n",
+    "my_tuple=(1,2,3) # note: you can not modify tuple"
+   ]
   }
  ],
  "metadata": {
