# dictionary my_dic = {     "apple": "a fruit",     "bear": "an animal",     1:"what",     "wtf": 123,     1: True,     0: False } my_dic[1] # this will return the latest value that you set for key=1 my_dic.keys() # output => dict_keys(['apple', 'bear', 1, 'wtf', 0]) my_dic.values() # output => dict_values(['a fruit', 'an animal', True, 123, False]) # so as you can see this member -> ' 1:"what" ' not exist at all

--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,6 +180,45 @@
     "# tuple\n",
     "my_tuple=(1,2,3) # note: you can not modify tuple"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['a fruit', 'an animal', True, 123, False])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dictionary \n",
+    "my_dic = {\n",
+    "    \"apple\": \"a fruit\",\n",
+    "    \"bear\": \"an animal\",\n",
+    "    1:\"what\",\n",
+    "    \"wtf\": 123,\n",
+    "    1: True,\n",
+    "    0: False\n",
+    "}\n",
+    "my_dic[1] # this will return the latest value that you set for key=1 \n",
+    "my_dic.keys() # output => dict_keys(['apple', 'bear', 1, 'wtf', 0])\n",
+    "my_dic.values() # output => dict_values(['a fruit', 'an animal', True, 123, False])\n",
+    "# so as you can see this member -> ' 1:\"what\" ' not exist at all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
