note: dictionaries have unique keys

--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -210,7 +210,8 @@
     "my_dic[1] # this will return the latest value that you set for key=1 \n",
     "my_dic.keys() # output => dict_keys(['apple', 'bear', 1, 'wtf', 0])\n",
     "my_dic.values() # output => dict_values(['a fruit', 'an animal', True, 123, False])\n",
-    "# so as you can see this member -> ' 1:\"what\" ' not exist at all"
+    "# so as you can see this member -> ' 1:\"what\" ' not exist at all \n",
+    "# note: dictionaries have unique keys"
    ]
   },
   {
