--- a/1-exercise_files/02_05_Functions.ipynb
+++ b/1-exercise_files/02_05_Functions.ipynb
@@ -23,12 +23,12 @@
     }
    ],
    "source": [
-    "print('Hello, World!')"
+    "print('Hello, World!')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ad0049c8",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
        "12"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5b73fcaa",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9b62e051",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "12"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
