add the answer of challenge 02_07 to hint file

--- a/1-exercise_files/02_07_Challenge.ipynb
+++ b/1-exercise_files/02_07_Challenge.ipynb
@@ -33,6 +33,7 @@
    "outputs": [],
    "source": [
     "# Returns the value of the factorial of num if it is defined, otherwise, returns None\n",
+    "# the answer is written at the end of 02_07_Challenge_Hints.ipynb file. but, at first try it yourself\n",
     "def factorial(num):\n",
     "    pass\n"
    ]
