--- a/1-exercise_files/02_07_Challenge_Hints.ipynb
+++ b/1-exercise_files/02_07_Challenge_Hints.ipynb
@@ -200,8 +200,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "714148cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the answer of challenge 02_07:\n",
+    "\n",
+    "def factorial(num):\n",
+    "   try:\n",
+    "       # The factorial of a negative number is undefined in mathematics\n",
+    "      if num >=0:\n",
+    "          result = 1\n",
+    "          for i in range(1, num + 1):\n",
+    "            result *= i\n",
+    "          return result\n",
+    "      else:\n",
+    "         return None\n",
+    "   except:\n",
+    "      return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "18976671",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(factorial('spam spam spam spam spam spam'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "efa71cf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(factorial(1.2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ad298ef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(factorial(-2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "922df368",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(factorial(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b9778c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -223,7 +318,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
