--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -237,6 +237,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(num):\n",
+    "   try:\n",
+    "       # The factorial of a negative number is undefined in mathematics\n",
+    "      if num >=0:\n",
+    "          result = 1\n",
+    "          for i in range(1, num + 1):\n",
+    "            result *= i\n",
+    "          return result\n",
+    "      else:\n",
+    "         return None\n",
+    "   except:\n",
+    "      return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# also you can use math.factorial() function in Python's math module\n",
+    "import math \n",
+    "math.factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
