--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -282,6 +282,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# ok what the hell is this?\n",
+    "class Sample(): ... \n",
+    "\n",
+    "# i find the answer :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# question about above block :\n",
+    "\n",
+    "what are these 3 dots in front of it? let me show you an example that where first I found something like this:\n",
+    "here in _decimal.pyi file  I found this class defined like this=>\n",
+    "\"class DecimalException(ArithmeticError): ...\" why it is defined like this? also there was more=>\"class Clamped(DecimalException): ...\n",
+    "class InvalidOperation(DecimalException): ...\n",
+    "class ConversionSyntax(InvalidOperation): ...\n",
+    "class DivisionByZero(DecimalException, ZeroDivisionError): ...\n",
+    "class DivisionImpossible(InvalidOperation): ...\n",
+    "class DivisionUndefined(InvalidOperation, ZeroDivisionError): ...\n",
+    "class Inexact(DecimalException): ...\n",
+    "class InvalidContext(InvalidOperation): ...\n",
+    "class Rounded(DecimalException): ...\n",
+    "class Subnormal(DecimalException): ...\n",
+    "class Overflow(Inexact, Rounded): ...\n",
+    "class Underflow(Inexact, Rounded, Subnormal): ...\n",
+    "class FloatOperation(DecimalException, TypeError): ...\"\n",
+    "\n",
+    "also there is functions like them => \"\n",
+    "def setcontext(__context: Context) -> None: ...\n",
+    "def getcontext() -> Context: ...\"\n",
+    "\n",
+    "what are these ?\n",
+    "\n",
+    "# the answer :\n",
+    "\n",
+    "In Python, the three dots (...) at the beginning of a class definition in a file, such as _decimal.pyi, indicate that the class is defined in a separate file. This is a convention used in Python's type hinting system, which is part of the type annotations feature. The three dots indicate that the class is defined in another module, and the Python interpreter will look for the class definition in that module. This allows for more concise and readable type hints, especially when dealing with large libraries or when a class is defined in a separate file.\n",
+    "\n",
+    "For example, if the DecimalException class is defined in a separate file, _decimal.py, the type hint in _decimal.pyi would look like this:\n",
+    "\n",
+    ">\n",
+    ">python\n",
+    ">\n",
+    ">from ._decimal import DecimalException\n",
+    ">\n",
+    ">class DecimalException(ArithmeticError):  # ... (three dots)\n",
+    ">    ...\n",
+    ">\n",
+    "\n",
+    "This indicates that the DecimalException class is defined in the _decimal module, which is in the same directory as the _decimal.pyi file. The three dots are a way to indicate this relationship without having to explicitly import the module in the type hint.\n",
+    "The same convention applies to functions and other entities that are defined in separate files. The three dots indicate that the definition is in another file, and the Python interpreter will look for it there."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
