--- a/1-exercise_files/02_06_Classes_and_Instances.ipynb
+++ b/1-exercise_files/02_06_Classes_and_Instances.ipynb
@@ -30,10 +30,43 @@
    "execution_count": 2,
    "id": "5b3dde35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Dog"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "my_dog = Dog('Rover')\n",
-    "another_dog = Dog('Fluffy')"
+    "another_dog = Dog('Fluffy')\n",
+    "type(Dog('Rover'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "631229c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Dog"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(Dog('Rover'))"
    ]
   },
   {
