--- a/1-exercise_files/03_06_Challenge.ipynb
+++ b/1-exercise_files/03_06_Challenge.ipynb
@@ -43,7 +43,8 @@
     "# Converts a string hexadecimal number into an integer decimal\n",
     "# If hexNum is not a valid hexadecimal number, returns None\n",
     "def hexToDec(hexNum):\n",
-    "    pass"
+    "    pass\n",
+    "\n"
    ]
   },
   {
