--- a/1-exercise_files/03_06_Challenge.ipynb
+++ b/1-exercise_files/03_06_Challenge.ipynb
@@ -44,7 +44,7 @@
     "# If hexNum is not a valid hexadecimal number, returns None\n",
     "def hexToDec(hexNum):\n",
     "    pass\n",
-    "\n"
+    "# you can see the answers in the blew lines of 03_06_challenge_hints file"
    ]
   },
   {
