--- a/1-exercise_files/03_06_Challenge_Hints.ipynb
+++ b/1-exercise_files/03_06_Challenge_Hints.ipynb
@@ -219,7 +219,25 @@
    "id": "0051662e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#answers\n",
+    "def hex_to_decimal(hex_string):\n",
+    "    decimal_number = int(hex_string, 16)\n",
+    "    return decimal_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec99278c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ast\n",
+    "def hex_to_decimal(hex_string):\n",
+    "    decimal_number = ast.literal_eval(hex_string)\n",
+    "    return decimal_number"
+   ]
   }
  ],
  "metadata": {
