add possible answers

--- a/1-exercise_files/03_06_Challenge_Hints.ipynb
+++ b/1-exercise_files/03_06_Challenge_Hints.ipynb
@@ -214,13 +214,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40e7a2ce",
+   "metadata": {},
+   "source": [
+    "# answers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0051662e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#answers\n",
+    "#answer no.1 / using int\n",
     "def hex_to_decimal(hex_string):\n",
     "    decimal_number = int(hex_string, 16)\n",
     "    return decimal_number"
@@ -233,9 +241,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#answer no.2 using ast mudule\n",
     "import ast\n",
     "def hex_to_decimal(hex_string):\n",
     "    decimal_number = ast.literal_eval(hex_string)\n",
+    "    return decimal_number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d565c2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the right answer\n",
+    "def hex_to_decimal(hex_string):\n",
+    "    hex_digits = \"0123456789ABCDEF\"\n",
+    "    hex_string = hex_string.upper()\n",
+    "    decimal_number = 0\n",
+    "    for digit in hex_string:\n",
+    "        decimal_number = 16 * decimal_number + hex_digits.index(digit)\n",
     "    return decimal_number"
    ]
   }
