--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +341,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# we want to write a function that Convert Hexadecimal to Decimal\n",
+    "# Converts a string hexadecimal number into an integer decimal\n",
+    "# If hexNum is not a valid hexadecimal number, returns None\n",
+    "def hexToDec(hexNum):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# what is \"ast\" module ?\n",
+    "\n",
+    "The ast module in Python is a standard library module that helps Python applications to process trees of the Python abstract syntax grammar. It provides a set of functions for working with abstract syntax trees (ASTs), which are a hierarchical, tree-like data structure that represents the syntactic structure of a program. The ast module can be used to create, visit, and modify ASTs related to Python source code. It is particularly useful for tasks such as code analysis, optimization, transformation, tooling, and automation. The module provides functions for parsing Python code and constructing an AST tree, as well as for analyzing, traversing, and transforming the AST. The AST captures the essential elements of the program’s syntax, providing a structured representation of operators, functions, statements, and expressions. The ast module is an essential tool for Python developers who want to analyze and manipulate Python code programmatically. It is built into the standard library and is widely used in various Python tools and libraries for tasks such as linters, code formatters, static analyzers, and more."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
