--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -359,9 +359,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "#answer no.1 / using int\n",
+    "def hex_to_decimal(hex_string):\n",
+    "    decimal_number = int(hex_string, 16)\n",
+    "    return decimal_number\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
