--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -368,7 +368,12 @@
     "def hex_to_decimal(hex_string):\n",
     "    decimal_number = int(hex_string, 16)\n",
     "    return decimal_number\n",
-    "\n"
+    "\n",
+    "#answer no.2 using ast mudule\n",
+    "import ast\n",
+    "def hex_to_decimal(hex_string):\n",
+    "    decimal_number = ast.literal_eval(hex_string)\n",
+    "    return decimal_number"
    ]
   }
  ],
