--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -373,6 +373,15 @@
     "import ast\n",
     "def hex_to_decimal(hex_string):\n",
     "    decimal_number = ast.literal_eval(hex_string)\n",
+    "    return decimal_number\n",
+    "\n",
+    "# the right answer\n",
+    "def hex_to_decimal(hex_string):\n",
+    "    hex_digits = \"0123456789ABCDEF\"\n",
+    "    hex_string = hex_string.upper()\n",
+    "    decimal_number = 0\n",
+    "    for digit in hex_string:\n",
+    "        decimal_number = 16 * decimal_number + hex_digits.index(digit)\n",
     "    return decimal_number"
    ]
   }
