--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -382,6 +382,16 @@
     "    decimal_number = 0\n",
     "    for digit in hex_string:\n",
     "        decimal_number = 16 * decimal_number + hex_digits.index(digit)\n",
+    "    return decimal_number\n",
+    "\n",
+    "# no.4\n",
+    "def hex_to_decimal(hex_string):\n",
+    "    decimal_number = 0\n",
+    "    power = 0\n",
+    "    hex_digits = \"0123456789ABCDEF\"\n",
+    "    for digit in hex_string[::-1]:\n",
+    "        decimal_number += hex_digits.index(digit) * (16 ** power)\n",
+    "        power += 1\n",
     "    return decimal_number"
    ]
   }
