--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -375,7 +375,7 @@
     "    decimal_number = ast.literal_eval(hex_string)\n",
     "    return decimal_number\n",
     "\n",
-    "# the right answer\n",
+    "# the right answer / no.3\n",
     "def hex_to_decimal(hex_string):\n",
     "    hex_digits = \"0123456789ABCDEF\"\n",
     "    hex_string = hex_string.upper()\n",
