--- a/1-exercise_files/03_06_Challenge_Hints.ipynb
+++ b/1-exercise_files/03_06_Challenge_Hints.ipynb
@@ -339,37 +339,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4d565c2a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# the right answer\n",
     "def hex_to_decimal(hex_string):\n",
-    "    hex_digits = \"0123456789ABCDEF\"\n",
-    "    hex_string = hex_string.upper()\n",
-    "    decimal_number = 0\n",
-    "    for digit in hex_string:\n",
-    "        decimal_number = 16 * decimal_number + hex_digits.index(digit)\n",
-    "    return decimal_number"
+    "    try:\n",
+    "        hex_digits = \"0123456789ABCDEF\"\n",
+    "        hex_string = hex_string.upper()\n",
+    "        decimal_number = 0\n",
+    "        for digit in hex_string:\n",
+    "            decimal_number = 16 * decimal_number + hex_digits.index(digit)\n",
+    "        return decimal_number\n",
+    "    except:\n",
+    "        return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "620749c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hex_to_decimal('A')) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "b0929110",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hex_to_decimal('ZZTOP'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "71c62104",
    "metadata": {},
    "outputs": [],
    "source": [
     "# no.4\n",
     "def hex_to_decimal(hex_string):\n",
-    "    decimal_number = 0\n",
-    "    power = 0\n",
-    "    hex_digits = \"0123456789ABCDEF\"\n",
-    "    for digit in hex_string[::-1]:\n",
-    "        decimal_number += hex_digits.index(digit) * (16 ** power)\n",
-    "        power += 1\n",
-    "    return decimal_number"
+    "    try:\n",
+    "        decimal_number = 0\n",
+    "        power = 0\n",
+    "        hex_digits = \"0123456789ABCDEF\"\n",
+    "        for digit in hex_string[::-1]:\n",
+    "            decimal_number += hex_digits.index(digit) * (16 ** power)\n",
+    "            power += 1\n",
+    "        return decimal_number\n",
+    "    except:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "028cf158",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hex_to_decimal('A')) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c5b81de6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(hex_to_decimal('ZZTOP'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4f53194",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# so , both no.3 and no.4 works correctly"
    ]
   }
  ],
