--- a/0-play-ground/play-one.ipynb
+++ b/0-play-ground/play-one.ipynb
@@ -364,18 +364,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#answer no.1 / using int\n",
+    "#answer no.1 / using int => passed\n",
     "def hex_to_decimal(hex_string):\n",
     "    decimal_number = int(hex_string, 16)\n",
     "    return decimal_number\n",
     "\n",
-    "#answer no.2 using ast mudule\n",
+    "#answer no.2 using ast mudule => failed\n",
     "import ast\n",
     "def hex_to_decimal(hex_string):\n",
     "    decimal_number = ast.literal_eval(hex_string)\n",
     "    return decimal_number\n",
     "\n",
-    "# the right answer / no.3\n",
+    "# the right answer / no.3 => passed\n",
     "def hex_to_decimal(hex_string):\n",
     "    hex_digits = \"0123456789ABCDEF\"\n",
     "    hex_string = hex_string.upper()\n",
@@ -384,7 +384,7 @@
     "        decimal_number = 16 * decimal_number + hex_digits.index(digit)\n",
     "    return decimal_number\n",
     "\n",
-    "# no.4\n",
+    "# no.4  => passed\n",
     "def hex_to_decimal(hex_string):\n",
     "    decimal_number = 0\n",
     "    power = 0\n",
