--- a/1-exercise_files/03_06_Challenge_Hints.ipynb
+++ b/1-exercise_files/03_06_Challenge_Hints.ipynb
@@ -344,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# the right answer\n",
+    "# the right answer / no.3\n",
     "def hex_to_decimal(hex_string):\n",
     "    try:\n",
     "        hex_digits = \"0123456789ABCDEF\"\n",
@@ -354,7 +354,13 @@
     "            decimal_number = 16 * decimal_number + hex_digits.index(digit)\n",
     "        return decimal_number\n",
     "    except:\n",
-    "        return None"
+    "        return None\n",
+    "    \n",
+    "#This function follows the same approach as the previous one,\n",
+    "#converting each hexadecimal digit to its decimal equivalent and\n",
+    "#then calculating the decimal number by multiplying the current result by 16 and\n",
+    "#adding the decimal value of the next digit. For example, hex_to_decimal(\"1A\") will return\n",
+    "#the decimal equivalent of the hexadecimal number \"1A,\" which is 26"
    ]
   },
   {
