--- a/1-exercise_files/03_06_Challenge_Hints.ipynb
+++ b/1-exercise_files/03_06_Challenge_Hints.ipynb
@@ -356,7 +356,7 @@
     "    except:\n",
     "        return None\n",
     "    \n",
-    "#This function follows the same approach as the previous one,\n",
+    "#This function follows this approach:\n",
     "#converting each hexadecimal digit to its decimal equivalent and\n",
     "#then calculating the decimal number by multiplying the current result by 16 and\n",
     "#adding the decimal value of the next digit. For example, hex_to_decimal(\"1A\") will return\n",
@@ -417,7 +417,8 @@
     "            power += 1\n",
     "        return decimal_number\n",
     "    except:\n",
-    "        return None"
+    "        return None\n",
+    "#In this function, we iterate through the hexadecimal string in reverse, starting from the least significant digit. We calculate the decimal equivalent of each digit and consider its position by increasing powers of 16. The hex_digits.index(digit) expression is used to find the decimal value of each hexadecimal digit. This approach provides an alternative way to convert a hexadecimal number to its decimal equivalent without using the int() function or any extra library. For example, hex_to_decimal(\"1A\") will also return the decimal equivalent of the hexadecimal number \"1A,\" which is 26."
    ]
   },
   {
