--- a/2-amazing-in-python/amazed-by-Python-3.12.ipynb
+++ b/2-amazing-in-python/amazed-by-Python-3.12.ipynb
@@ -140,6 +140,174 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funct_a(name: str, age): # report error. function partially annotated ❌\n",
+    "    ...\n",
+    "\n",
+    "def funct_b(name, age): # report error. function not annotated ❌\n",
+    "    ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def funct_a(name: str, age): # report error. function partially annotated ❌\n",
+    "    ...\n",
+    "\n",
+    "def funct_b(name, age): # no error. ✅\n",
+    "    ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Generic types in Python’s typing\n",
+    "\n",
+    "In Computer Science we define data types as generic when we don’t know beforehand which type we’re dealing with.\n",
+    "\n",
+    "The type will be inferred later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class Person:\n",
+    "    name: str\n",
+    "    age: int\n",
+    "\n",
+    "\n",
+    "people: list[Person] = [] # a "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our example above, we create a variable people that is a list. A list is a generic type since it can contain any data type we want.\n",
+    "\n",
+    "In this case, we explicitly specified that our generic type, list, will be a list of Person. So when we iterate over our list, the type of each item will be inferred as Person:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# people: list[Person] = [] from example above\n",
+    "\n",
+    "\n",
+    "# person variable type will be Person\n",
+    "for person in people:\n",
+    "    print(f\"Name - {person.name}, Age - {person.age}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "— What if we don’t know which data type to use?\n",
+    "\n",
+    "Sometimes we don’t know the data type or it can be of any type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "people = [] # a empty list with that can be of any type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way of doing this is by using the builtin TypeVar from the typing library:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypeVar\n",
+    "\n",
+    "T = TypeVar('T') # this meas T can be of any type\n",
+    "\n",
+    "people: list[T] = [] # a empty list with that can be of any type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TypeVar allows us to\n",
+    "\n",
+    "— Why TypeVar?\n",
+    "\n",
+    "If you’re familiar with other programming languages like Java, you’ve probably seen something like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# /**\n",
+    "#  * Generic version of the Dictionary class.\n",
+    "#  * @param <K> the key of the value for our dictionary\n",
+    "#  * @param <T> the type of the our dictionary\n",
+    "#  */\n",
+    "# public class Dictionary<K, T> { /* ... */ }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In Java, as you can see we can create a representation of a generic type — T and K — without the need to explicitly define them.\n",
+    "\n",
+    "The same was not possible in Python. Not since Python3.12.\n",
+    "\n",
+    "Before Python3.12, if we wanted to define a generic type we had to explicitly create the type so it could be recognized inside our namespace."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypeVar\n",
+    "\n",
+    "T = TypeVar('T')\n",
+    "K = TypeVar('K')\n",
+    "\n",
+    "class Dictionary():\n",
+    "    def __init__(self, key: K, value: T):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
