--- a/2-amazing-in-python/amazed-by-Python-3.12.ipynb
+++ b/2-amazing-in-python/amazed-by-Python-3.12.ipynb
@@ -307,6 +307,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A generic type can also be bound or constrained to a certain data type if we wish:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import TypeVar\n",
+    "\n",
+    "T = TypeVar('T', bound=str) # any str or subtype of str object\n",
+    "K = TypeVar('K', str, int) # have to be a str or int"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With Python3.12, now we don’t have to explicitly declare the TypeVar in our namespace — module —, we can take the same approach as we saw in the Java example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dictionary[T, K]: # the new way of creating generic\n",
+    "    def __init__(self, key: K, value: T):\n",
+    "        pass"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
